crates/nsl-codegen/tests/snapshots/hir_pass_snapshots__elementwise_add_i32.snap
---
source: crates/nsl-codegen/tests/hir_pass_snapshots.rs
expression: structural_summary(&module)
---
module: bias_add_test
test_taps: true
ports: 0
nodes: 1
[0] GenerateFor lo=0 hi=128 body={
  [0] Add width=32 a="Port(__eltadd_a)" b="Port(__eltadd_b)"
}
