crates/nsl-codegen/tests/snapshots/hir_pass_snapshots__elementwise_add_i64.snap
---
source: crates/nsl-codegen/tests/hir_pass_snapshots.rs
expression: structural_summary(&module)
---
module: bias_add_i64_test
test_taps: true
ports: 2
  Port::Input eltadd_a_l1 width=640
  Port::Input eltadd_b_l1 width=640
local_params: 0
nodes: 1
[0] GenerateFor lo=0 hi=10 body={
  [0] WireDecl width=64
  [1] Add width=64 a="Port(eltadd_a_l1)" b="Port(eltadd_b_l1)"
}
