crates/nsl-codegen/tests/snapshots/hir_pass_snapshots__matmul_i32_decomposition_collapses_mac_chain.snap
---
source: crates/nsl-codegen/tests/hir_pass_snapshots.rs
expression: structural_summary(&module)
---
module: matmul_i32_test
test_taps: true
ports: 1
  Port::Input x_l1 width=4096
local_params: 1290
  LocalParam W1_0_0 width=32
  …(prefix="W1", 1278 elided)…
  LocalParam W1_127_9 width=32
  LocalParam b1_0 width=64
  …(prefix="b1", 8 elided)…
  LocalParam b1_9 width=64
nodes: 1
[0] GenerateFor lo=0 hi=10 body={
  [0] GenerateFor lo=0 hi=128 body={
    [0] Mul a_width=32 b_width=32 out_width=64 a="Port(x_l1)" b="LocalParam(W1)"
    [1] Add width=64 a="Port(__matmul_acc_prev_LEGACY)" b="Wire(<id>)"
  }
}
