crates/nsl-codegen/tests/snapshots/hir_pass_snapshots__matmul_i8_decomposition.snap
---
source: crates/nsl-codegen/tests/hir_pass_snapshots.rs
expression: structural_summary(&module)
---
module: matmul_i8_test
test_taps: true
ports: 1
  Port::Input x_l1 width=6272
local_params: 100352
  LocalParam W1_0_0 width=8
  …(prefix="W1", 100350 elided)…
  LocalParam W1_783_127 width=8
nodes: 1
[0] GenerateFor lo=0 hi=128 body={
  [0] Wire width=32
  [1] GenerateFor lo=0 hi=784 body={
    [0] Mul a_width=8 b_width=8 out_width=16 a="Port(x_l1)" b="LocalParam(W1)"
    [1] SignExtend src_width=16 dst_width=32
    [2] Add width=32 a="Port(acc_l1_prev)" b="Wire(<id>)"
  }
}
