crates/nsl-codegen/tests/snapshots/hir_pass_snapshots__relu_i32.snap
---
source: crates/nsl-codegen/tests/hir_pass_snapshots.rs
expression: structural_summary(&module)
---
module: relu_test
test_taps: true
ports: 0
local_params: 0
nodes: 1
[0] GenerateFor lo=0 hi=128 body={
  [0] Max0 width=32 a="Port(__relu_in)"
}
